Track file changes with and without inotify
Replace inotify dependency with notify and handle the
behavioural changes. Use polling for macOS.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,8 +9,9 @@ members = [
     "common/middleware",
     "common/journald",
     "common/state",
-    "bench",
+    "common/notify_stream",
     "utils/metrics-recorder"
+    "bench",
 ]
 
 [profile.release]
