--- a/bin/Cargo.toml
+++ b/bin/Cargo.toml
@@ -47,6 +47,10 @@ pin-utils = "0.1"
 auditable = "0.1"
 miniz_oxide = "0.4"
 
+# Dependency for linux integration tests
+[target.'cfg(target_os="linux")'.dependencies]
+systemd = { package = "systemd", version = "0.7" }
+
 [features]
 default = []
 integration_tests = []
@@ -76,7 +80,6 @@ proptest = "1"
 tokio-test = "0.4"
 futures = "0.3"
 rand = "0.8"
-systemd = "0.7"
 nix = "0.23"
 wait-timeout = "0.2"
 hyper = { version = "0.14", features = ["http1"] }
@@ -86,6 +89,9 @@ prometheus-parse = { git = "https://github.com/ccakes/prometheus-parse-rs", rev 
 float-cmp = "0.9.0"
 once_cell = "1.10"
 serial_test = "0.6"
+
+[target.'cfg(target_os="linux")'.dev-dependencies]
+systemd = { package = "systemd", version = "0.7" }
 
 [build-dependencies]
 auditable-build = "0.1"
