--- a/common/notify_stream/Cargo.toml
+++ b/common/notify_stream/Cargo.toml
@@ -5,7 +5,7 @@ authors = ["LogDNA <help@logdna.com>"]
 edition = "2018"
 
 [dependencies]
-chrono = "0.4"
+time = "0.3"
 notify = "4"
 futures = "0.3"
 async-channel = "1.6"
