--- a/appveyor.yml
+++ b/appveyor.yml
@@ -3,11 +3,20 @@ os: Visual Studio 2019
 # Disable msbuild
 build: false
 
+environment:
+  PATH: c:\OpenSSL-v111-Win64\bin;%PATH%
+  OPENSSL_ROOT_DIR: c:\OpenSSL-v111-Win64
+  OPENSSL_DIR: c:\OpenSSL-v111-Win64
+
 cache:
   - C:\Users\appveyor\.cargo
   - target
 
+before_build:
+  - echo SSL on %OPENSSL_DIR%
+
 install:
+  - echo Installing with SSL on %OPENSSL_DIR%
   - appveyor-retry appveyor DownloadFile https://win.rustup.rs/ -FileName rustup-init.exe
   - rustup-init.exe -y --default-host=x86_64-pc-windows-msvc
   - set PATH=%PATH%;C:\Users\appveyor\.cargo\bin
@@ -16,5 +25,4 @@ install:
   - cargo -vV
 
 test_script:
-  - cargo build -p fs --no-default-features
   - cargo check --no-default-features
