k8s init test only on Linux

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ members = [
     "common/journald",
     "common/state",
     "common/notify_stream",
-    "utils/metrics-recorder"
+    "utils/metrics-recorder",
     "bench",
 ]
 
