--- a/common/fs/Cargo.toml
+++ b/common/fs/Cargo.toml
@@ -18,12 +18,12 @@ thiserror = "1.0"
 bytes = "1"
 time = "0.3"
 pcre2 = { git = "https://github.com/logdna/rust-pcre2.git", branch="0.2", version = "0.2" }
-globber = "0.1"
 slotmap = "1"
 smallvec = "1"
 memchr = "2"
 serde_json = "1"
 pin-project-lite = "0.2"
+glob = "0.3"
 
 #logging
 log = "0.4"
