Use %ALLUSERSPROFILE%\logs as windows default

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -8,6 +8,7 @@ environment:
   OPENSSL_ROOT_DIR: c:\OpenSSL-v111-Win64
   OPENSSL_DIR: c:\OpenSSL-v111-Win64
   RUST_LOG: info
+  RUST_BACKTRACE: 1
 
 cache:
   - C:\Users\appveyor\.cargo
@@ -22,5 +23,6 @@ install:
   - cargo -vV
 
 test_script:
+  - cargo test -p config
   - cargo test -p fs -- --nocapture --test-threads=1
   - cargo build --no-default-features
