--- a/appveyor.yml
+++ b/appveyor.yml
@@ -23,5 +23,6 @@ install:
   - cargo -vV
 
 test_script:
+  - cargo test --no-run --no-default-features
   - cargo test -p fs -- --nocapture --test-threads=1
-  - cargo build --no-default-features
+
