--- a/appveyor.yml
+++ b/appveyor.yml
@@ -23,6 +23,6 @@ install:
   - cargo -vV
 
 test_script:
+  - cargo test --no-default-features
   - cargo test --no-default-features --features integration_tests --test cli test_tags -- --nocapture
-  - cargo test -p fs -- --nocapture --test-threads=1
 
