--- a/bench/Cargo.toml
+++ b/bench/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
+[workspace]
 [[bin]]
 name = "throughput"
 path = "bin/throughput.rs"
