--- a/common/fs/Cargo.toml
+++ b/common/fs/Cargo.toml
@@ -34,18 +34,19 @@ async-trait = "0.1"
 async-channel = "1"
 tokio = {version= "1", features= ["fs", "io-util"]}
 tokio-util = {version= "0.6", features= ["compat"]}
-tokio-stream = "0.1"
 futures = "0.3"
 futures-core = "0.3"
 futures-util = "0.3"
-
-winapi-util = { version = "0.1" }
 os_str_bytes = "6"
+
+[target.'cfg(windows)'.dependencies]
+winapi-util = { version = "0.1" }
 
 [dev-dependencies]
 env_logger = "0.8"
 tempfile = "3"
 tokio-test = "0.4"
 tokio = {version= "1", features= ["fs", "io-util", "time", "macros"]}
+tokio-stream = "0.1"
 middleware = { package = "middleware", path = "../middleware" }
 pin-utils = "0.1"
