--- a/common/k8s/Cargo.toml
+++ b/common/k8s/Cargo.toml
@@ -31,6 +31,7 @@ k8s-openapi = { version = "0.15", default_features = false, features = ["v1_24"]
 kube-derive = "0.73.0"
 serde = { version = "1", features = ["derive"]}
 serde_json = "1"
+serde-value-flatten = "0.1"
 pin-utils = "0.1"
 pin-project-lite = "0.2"
 
