--- a/common/k8s/Cargo.toml
+++ b/common/k8s/Cargo.toml
@@ -32,6 +32,7 @@ kube-derive = "0.73.0"
 serde = { version = "1", features = ["derive"]}
 serde_json = "1"
 serde-value-flatten = "0.1"
+serde_with = "1.3.1"
 pin-utils = "0.1"
 pin-project-lite = "0.2"
 
